@@ -1,0 +1,34 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+  "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en"
+      xmlns:tal="http://xml.zope.org/namespaces/tal"
+      xmlns:metal="http://xml.zope.org/namespaces/metal"
+      xmlns:i18n="http://xml.zope.org/namespaces/i18n"
+      lang="en"
+      i18n:domain="plone">
+
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+
+  <title i18n:translate="">Logout</title>
+
+  <link rel="stylesheet" type="text/css"
+        href="/++resource++plone-admin-ui.css" />
+
+</head>
+<body>
+  <img src="/++resource++plone-logo.png" width="215" height="56" />
+
+  <h1 i18n:translate="">
+      You have been logged out.
+  </h1>
+
+  <p>
+      <a tal:attributes="href context/absolute_url"
+         i18n:translate="">
+          Go back to your site.
+      </a>
+  </p>
+
+</body>
+</html>
